feat(fonts): tweak default font families and shapes
Use slanted shape instead of italics for emphasis.
Use (bold) sans family for headings (as all structural elements).

Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/frontmatter/information.tex
+++ b/frontmatter/information.tex
@@ -15,7 +15,7 @@
 
 \begin{tblr}{
         colspec = {r X},
-        column{1} = {font=\small\bfseries\color{Gray40}},
+        column{1} = {font=\small\sffamily\color{Gray40}},
         column{2} = {font=\small},
     }
     Title       & \ThesisTitle                             \\
