--- a/preamble/general/typesetting.tex
+++ b/preamble/general/typesetting.tex
@@ -1,13 +1,17 @@
 %%% Typesetting, figures, tables, etc.
 
 \ifpdftex % only for pdfLaTeX
-    \usepackage[T1]{fontenc}    % better support for accented characters
+    \usepackage[T1]{fontenc} % better support for accented characters
 \fi
-\usepackage{lmodern}        % Latin Modern fonts
-\usepackage{microtype}      % improve typography
+\usepackage{lmodern} % Latin Modern fonts
+
+%% use slanted shape for emphasis `\emph{...}`, and for nested emphasis use italics
+\DeclareEmphSequence{\slshape,\itshape}
+
+\usepackage{microtype}           % improve typography
 \DisableLigatures[-]{family=tt*} % disable ligatures in typewriter font
-\usepackage{parskip}        % no paragraph indentation
-\usepackage{csquotes}       % context-sensitive quotation facilities
+\usepackage{parskip}             % no paragraph indentation
+\usepackage{csquotes}            % context-sensitive quotation facilities
 
 %% Enumerate/itemize environments
 \usepackage{paralist}   % improved enumerate and itemize
