--- a/preamble/layout/titles.tex
+++ b/preamble/layout/titles.tex
@@ -8,9 +8,9 @@
 %%% Chapter and section formatting
 \usepackage{titlesec}
 
-\titleformat{\section}{\normalfont\Large\bfseries}{\thesection}{0.8em}{}
+\titleformat{\section}{\Large\sffamily\bfseries}{\thesection}{0.8em}{}
 %% NOTE: also include `\phantomsection` so even non-numbered subsections have proper anchors for hyperlinks
-\titleformat{\subsection}{\phantomsection\normalfont\large\bfseries}{\thesubsection}{0.8em}{}
+\titleformat{\subsection}{\phantomsection\large\sffamily\bfseries}{\thesubsection}{0.8em}{}
 
 %%% Chapter title formatting
 %% No extra space above and below chapter headings, big number/letter behind chapter title
@@ -19,7 +19,7 @@
 \NewDocumentCommand{\chaphead}{m O{}}{
     {\setlength{\parindent}{0pt} \raggedright
         % \vspace*{15pt}%
-        \Huge\bfseries%
+        \Huge\sffamily\bfseries%
         \ifFANCY%
             \chapterheadingletter{#2}% fancy Chapter number/letter
         \else%
