--- a/preamble/references/style.tex
+++ b/preamble/references/style.tex
@@ -6,7 +6,7 @@
 
 %% label number always in brackets with monospaced font
 %% -> modifying /usr/share/texmf-dist/tex/latex/biblatex/bbx/numeric.bbx
-\DeclareFieldFormat{labelnumberwidth}{\texttt{\mkbibbrackets{#1}}}
+\DeclareFieldFormat{labelnumberwidth}{\ttfamily\mkbibbrackets{#1}}
 % \DeclareFieldFormat{labelnumberwidth}{\citebox{\mkbibbrackets{#1}}}
 
 %% red color for `todo` category
@@ -23,8 +23,8 @@
 \DeclareFieldFormat{editortype}{\mkbibparens{#1}}
 \DeclareDelimFormat{editortypedelim}{\addspace}
 
-%% titles in sans-serif (with red for `todo` category)
-\DeclareFieldFormat*{title}{\textsf{\ifcategory{todo}{\textcolor{red}{#1}}{#1}}}
+%% titles in sans (with red for `todo` category)
+\DeclareFieldFormat*{title}{\sffamily\ifcategory{todo}{\textcolor{red}{#1}}{#1}}
 
 %% punctuation between title and subtitle
 \renewcommand*{\subtitlepunct}{ {\normalfont\textbullet} }
