feat(manual): rename Demo to Manual
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/data.tex
+++ b/preamble/data.tex
@@ -2,13 +2,13 @@
 \NewExpandableDocumentCommand{\ThesisType}{}{master}
 
 %% Thesis title (exactly as in the formal assignment)
-\NewExpandableDocumentCommand{\ThesisTitle}{}{\TeXtured{} Demo}
+\NewExpandableDocumentCommand{\ThesisTitle}{}{\TeXtured{} Manual}
 %% Plaintext version for PDF metadata, uncomment if needed (defauls to \ThesisTitle)
-\NewExpandableDocumentCommand{\ThesisTitlePlaintext}{}{TeXtured Demo}
+\NewExpandableDocumentCommand{\ThesisTitlePlaintext}{}{TeXtured Manual}
 %% Thesis title (if custom formatting is needed for the title page, defauls to \ThesisTitle)
 % \NewExpandableDocumentCommand{\ThesisTitleFront}{}{
 %     \TeXtured{}\\
-%     Demo
+%     Manual
 % }
 
 %% Author of the thesis
@@ -55,9 +55,9 @@
 
 %% Keywords (about 3-7)
 \NewExpandableDocumentCommand{\Keywords}{}{%
-    \textcolor{red}{Demo, Draft, WIP}
+    \textcolor{red}{Manual, Demo, Draft, WIP}
 }
 %% Plaintext version for PDF metadata, uncomment if needed (defauls to \Keywords)
 \NewExpandableDocumentCommand{\KeywordsPlaintext}{}{%
-    Demo, Draft, WIP
+    Manual, Demo, Draft, WIP
 }
