chore(layout): use clearempty option of titlesec package
No need to manually redefine `\cleardoublepage`.

Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/layout/geometry.tex
+++ b/preamble/layout/geometry.tex
@@ -18,10 +18,5 @@
     % showframe,          % for DEBUG: helper lines for adjusting layout
 }
 
-%% try to make all pages have the same height (default for `twoside`)
+%% try to make text on all pages have the same height (default for `twoside`)
 \flushbottom
-
-%% following text appears on a next page (right-hand page for two-sided printing)
-%% (empty page is inserted if necessary for two-sided printing)
-\NewCommandCopy{\oldcleardoublepage}{\cleardoublepage}
-\RenewDocumentCommand{\cleardoublepage}{}{\begingroup\pagestyle{empty}\oldcleardoublepage\endgroup}
