docs(manual): misc improvements
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/pdfA-compliance/LaTeX-find-glyph-name/LaTeX-find-glyph-name.tex
+++ b/preamble/pdfA-compliance/LaTeX-find-glyph-name/LaTeX-find-glyph-name.tex
@@ -5,6 +5,9 @@
 %% glyphs used in the document. This can be done in LaTeX by using the
 %% `\pdfglyphtounicode{<glyph_name>}{<Unicode_code_point>}` command.
 
+%% Using the veraPDF output, locate the problematic glyph in the PDF file,
+%% and insert it into the following minimal document.
+
 %% Name of the problematic glyph can be found by generating the following PDF.
 %% By disabling the PDF compression, we can inspect the whole PDF file as if
 %% it were a text file. Searching for `CharSet` in the PDF file we can find
