--- a/preamble/misc/inkscape.tex
+++ b/preamble/misc/inkscape.tex
@@ -6,7 +6,7 @@
 \usepackage{filemod}
 \NewDocumentCommand{\includesvg}{O{0.8\linewidth} O{./figures/Inkscape/} m}{%
     \filemodCmp{#2#3.pdf}{#2#3.svg}{}{% regenerate PDF+LaTeX code if SVG is newer
-        \ShellEscape{#2inkscape-export-to-latex "#2#3"}%
+        \ShellEscape{#2inkscape-export-to-latex "#2#3"}% use `inkscape-export-to-latex` script in the same directory
     }%
     \def\svgwidth{#1}% set the width of the figure
     \input{#2#3.pdf_tex}%
