--- a/thesis.tex
+++ b/thesis.tex
@@ -34,6 +34,7 @@
     % chapters/QuickSummary,
     % chapters/Notation,
     % chapters/Design,
+    % chapters/Usage,
     % chapters/Features,
     % chapters/Tips,
     % chapters/Summary,
@@ -56,6 +57,7 @@
 
 \mainmatter
 \include{chapters/Design}
+\include{chapters/Usage}
 \include{chapters/Features}
 \include{chapters/Tips}
 \include{chapters/Summary}
