--- a/preamble/data.tex
+++ b/preamble/data.tex
@@ -6,10 +6,10 @@
 %% Plaintext version for PDF metadata, uncomment if needed (defauls to \ThesisTitle)
 \NewExpandableDocumentCommand{\ThesisTitlePlaintext}{}{TeXtured Manual}
 %% Thesis title (if custom formatting is needed for the title page, defauls to \ThesisTitle)
-% \NewExpandableDocumentCommand{\ThesisTitleFront}{}{
-%     \TeXtured{}\\
-%     Manual
-% }
+\NewExpandableDocumentCommand{\ThesisTitleFront}{}{
+    \ThesisTitle\\
+    {\Huge\color{gray}v1.0.0}
+}
 
 %% Author of the thesis
 \NewExpandableDocumentCommand{\ThesisAuthor}{}{\textcolor{red}{Author's Name}}
