--- a/thesis.tex
+++ b/thesis.tex
@@ -1,3 +1,4 @@
+%% TeXtured 1.0.0 (2025-01-06)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% NOTE: If you find any issues or have any suggestions, please open %%
 %%       an Issue on GitHub: https://github.com/jdujava/TeXtured     %%
