--- a/thesis.tex
+++ b/thesis.tex
@@ -50,7 +50,7 @@
 % \include{frontmatter/dedication}
 % \include{frontmatter/information}
 
-\contents
+\contentsandlists
 
 \include{chapters/Introduction}
 \include{chapters/QuickSummary}
