fix(environments): consistent spacing after headpunct
Before, depending wheter one used `\label` after a structure
environment, one obtaind either one or two spaces. This was due to
`\struct` being placed after the punctuation.

Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/environments/init.tex
+++ b/preamble/environments/init.tex
@@ -24,7 +24,7 @@
 %%% Definitions of theorem/remark-like environments
 \declaretheoremstyle[
     headfont=\bfseries\sffamily, notefont=\mdseries\sffamily, bodyfont=\normalfont,
-    postheadhook=\strut,  % always same height (of the first line)
+    headpunct={\strut.},  % always same height (of the first line)
     % prefoothook=\strut, % [this messes up the spacing when the last line is an equation]
     %% ----------------- %%   -> better to handle with the qed symbol using `qedhere`
 ]{thmcommon}
