--- a/frontmatter/title.tex
+++ b/frontmatter/title.tex
@@ -1,4 +1,4 @@
-\currentpdfbookmark{Title Page}{titlepage} % add PDF outline entry
+\pdfbookmark{Title Page}{titlepage} % add PDF outline entry
 \thispagestyle{empty} % no number on the title page
 \begin{center}
     \begin{adjustbox}{center,trim=0 0.2cm 4cm 0.2cm}
