--- a/preamble/general/hyperref.tex
+++ b/preamble/general/hyperref.tex
@@ -2,6 +2,7 @@
 \usepackage[allowmove]{url}
 \usepackage{hyperref}   % clickable links and metadata
 \usepackage{nameref}    % cross-referencing by name
+\usepackage{bookmark}   % more control over PDF bookmarks
 
 %% Fallbacks for PDF metadata commands
 \ProvideExpandableDocumentCommand{\ThesisAuthorPlaintext}{}{\ThesisAuthor}
@@ -10,7 +11,6 @@
 
 \hypersetup{
     linktoc=all,         % whole entry in TOC is clickable link
-    bookmarksnumbered,   % include chapter/section numbers in PDF outline
     pdfborder={0 0 0},   % to disable borders/frames around links
     pdflinkmargin=1.0pt, % extra link area around the text box (default 1pt)
     citebordercolor=CiteColor,
@@ -24,6 +24,11 @@
     pdfcreator={LaTeX with hyperref, and biblatex/biber},
     pdfdisplaydoctitle, % https://tex.stackexchange.com/a/435434/120853
 }
+\bookmarksetup{
+    numbered, % include chapter/section numbers in PDF outline
+    open, openlevel=1, % expand bookmarks to level 1 (chapters)
+}
+
 
 %% NOTE: look of references, hyperlinks, and citations is customized
 %%       mainly in `preamble/hacks/custom-reference-boxes.tex`
