feat(structure): support parts
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/general/typesetting.tex
+++ b/preamble/general/typesetting.tex
@@ -3,7 +3,8 @@
 \ifpdftex % only for pdfLaTeX
     \usepackage[T1]{fontenc} % better support for accented characters
 \fi
-\usepackage{lmodern} % Latin Modern fonts
+\usepackage{lmodern}  % Latin Modern fonts
+\usepackage{romanbar} % Roman numerals with bars, provides `\Romanbar{...}`
 
 %% Commands for accessing extra Latin Modern fonts
 %%     - `sbc` - sans bold condensed
