--- a/preamble/layout/toc.tex
+++ b/preamble/layout/toc.tex
@@ -30,7 +30,7 @@
 %% BUG: pdfLaTeX with changed `\contentsmargin` does not properly align page numbers
 %% HACK: to obatain proper placement of page numbers we need to toggle off
 %%       `\bfseries` with `\normalfont`, and only then apply it inside `\contentspage`
-\titlecontents{chapter}[1.6em]{\vspace{2.4ex}\bfseries} % <section> <left> <above-code>
+\titlecontents{chapter}[1.6em]{\addvspace{2.4ex}\bfseries} % <section> <left> <above-code>
 {\contentslabel{1.4em}}{\hspace*{-1.4em}} % <numbered-entry-format> <numberless-entry-format>
 {\hfill\normalfont\contentspage[\bfseries\thecontentspage]} % <filler-page-format> <--- HACK
 
@@ -43,3 +43,9 @@
 \titlecontents*{subsection}[4.7em]{\footnotesize\color{Gray40}}  % <section> <left> <above-code>
 {}{}{ \thecontentspage} % <numbered-entry-format> <numberless-entry-format> <filler-page-format>
 [][\ \textbullet\ ][\hspace*{0.6em}\vspace{0.1em}]  % <begin> <separator> <end>
+
+%% part entries in TOC are centered, bigger, and without page number
+\titlecontents{part}[2em]{\addvspace{3ex}\filcenter} % centered part title
+{\small Part \thecontentslabel\\*[-0.2ex]\Large\bfseries}{\Large\bfseries}
+{}[\addvspace{1.0ex}] % without page number
+
