fix(hyperref): proper placement of section hyperlink anchors
Before, if a section started on the new page, the corresponding
hyperlink pointed to the last line on the previous page instead of the
section title.

Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/layout/titles.tex
+++ b/preamble/layout/titles.tex
@@ -9,8 +9,9 @@
 %% `clearempty` option removes page numbers from empty pages when using `\cleardoublepage`
 \usepackage[newparttoc, clearempty]{titlesec}
 
-\titleformat{\section}{\Large\sffamily\bfseries}{\thesection}{0.8em}{}
-%% NOTE: also include `\phantomsection` so even non-numbered subsections have proper anchors for hyperlinks
+%% NOTE: also include `\phantomsection` so that hyperlink anchors are properly placed 
+%%                                                     (even non-numbered subsections)
+\titleformat{\section}   {\phantomsection\Large\sffamily\bfseries}{\thesection}   {0.8em}{}
 \titleformat{\subsection}{\phantomsection\large\sffamily\bfseries}{\thesubsection}{0.8em}{}
 
 %% Part title (page) formatting
