feat(math): revamp math macros
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/environments/remark-like.tex
+++ b/preamble/environments/remark-like.tex
@@ -33,7 +33,7 @@
 %%       otherwise the line was getting breaked earlier then necesarry
 \NewDocumentCommand{\proofqed}{}{
     \color{black!60}% lighter color for the smaller square QED symbol
-    \hspace{-1em}\raisebox{-0.01em}{\(\square[0.4em][bottom]\mspace{1mu}\)}% tweak positioning
+    \hspace{-1em}\raisebox{-0.01em}{\(\square[0.4em][aligntableaux=bottom]\mspace{1mu}\)}% tweak positioning
     \strut% ensure consistent height of the final line
 }
 
