docs(fonts): fix comment about font family
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/general/typesetting.tex
+++ b/preamble/general/typesetting.tex
@@ -8,7 +8,7 @@
 
 %% Commands for accessing extra Latin Modern fonts
 %%     - `sbc` - sans bold condensed
-%%     - `sfq` - sans extended
+%%     - `sfe` - sans serif extended (font family `lmssq` for "Latin Modern Sans Serif Quotation")
 %% https://www.tug.org/pracjourn/2006-1/robertson/robertson.pdf
 \NewDocumentCommand{\sbcseries}{}{\sffamily\fontseries{sbc}\selectfont}
 \NewDocumentCommand{\sfefamily}{}{\fontfamily{lmssq}\selectfont}
